<resources>
    <string name="app_name">GeoTrace</string>
    <string name="title_activity_geofencing">Geofencing</string>
    <string name="title_activity_tracing_route">TracingRoute</string>
    <string name="button_in_app">Go to In App Messaging</string>
    <string name="button_trace_route">Go to Trace Route Page</string>
    <string name="button_geofence">Go to Geo-fencing</string>
    <string name="sos_button">SOS</string>
    <string name="username">Username</string>
    <string name="email">Email ID</string>
    <string name="phone">Contact Number</string>
    <string name="password">Password</string>
    <string name="conf_password">Confirm Password</string>
    <string name="signup_button">Signup</string>
    <string name="login_button">Login</string>
    <string name="no_account">New User ?</string>
    <string name="create_acc">Create An Account</string>
    <string name="have_acc">Existing User ?</string>
    <string name='login_acc'>Login Here</string>
    <string name="home_name">Username</string>
    <string name="home_hashName">Unique ID</string>
    <string name="home_email">Email ID</string>
    <string name="home_contact">Contact</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="locUpdate">Location Update</string>
    <string name="gpsSensors">GPS Sensors       </string>
    <string name="startTrack">Start Tracking</string>
    <string name="descStartTrack">Enable tracking to monitor your routes and create Geo-Fences. Requires location.</string>
    <string name="stopTrack">Stop Tracking</string>
    <string name="descStopTrack">Terminate Tracking. Monitoring on the basis of the Geo-Fences created.</string>
</resources>