<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="220dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.cardview.widget.CardView
            android:id="@+id/cardStopTracking"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="2dp"
            app:cardMaxElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="91dp">

                <ImageView
                    android:id="@+id/stopTrackImage"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/ic_baseline_location_off_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/stopTrackingTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/stopTrack"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/stopTrackImage"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/stopTrackingDesc"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="41dp"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/descStopTrack"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@+id/stopTrackImage"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardStartTracking"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="2dp"
            app:cardMaxElevation="4dp"
            app:layout_constraintEnd_toEndOf="@+id/cardStopTracking"
            app:layout_constraintStart_toStartOf="@+id/cardStopTracking"
            app:layout_constraintTop_toBottomOf="@+id/cardStopTracking">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="91dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="116dp">

                <ImageView
                    android:id="@+id/trackImage"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/ic_baseline_add_location_alt_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/startTrackingTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/startTrack"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/trackImage"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/startTrackingDesc"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="41dp"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/descStartTrack"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@+id/trackImage"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sosConstraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_sos_24" />

        <TextView
            android:id="@+id/aboutSOS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/sendSOS"
            android:textColor="#000000"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>